updat on donate

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <img src="/img/WhatsApp Image 2025-05-03 at 1.27.49 PM.jpeg" alt="Dr. Health Advisor">
             </div>
             <div class="about-content">
-                <h2>Veronica Anyaah</h2>
+                <h2>Veronica Enyaah</h2>
                 <p>With over 15 years of experience in pharmacy assistant, Ronic has dedicated her career to improving health outcomes through education, advocacy, and community engagement.</p>
                 <p>Her work focuses on preventive health measures, health literacy, and empowering individuals to take control of their wellbeing through healthy practices.</p>
                 <p>Ronic holds a Certificate in Pharmacy assistant from MCA Training School and has worked with numerous ministries to implement health programs in underserved communities.</p>
@@ -138,7 +138,8 @@
                         <div class="progress"></div>
                     </div>
                 </div>
-                <a href="#" class="btn">Donate Now</a>
+                <a href="https://paystack.shop/pay/c5tovi3cnl" target="_blank" class="btn">Donate Now</a>
+            
             </div>
             <div class="foundation-img">
                 <img src="/img/WhatsApp Image 2025-05-03 at 1.47.12 PM.jpeg" alt="Health for Her Foundation">
@@ -207,7 +208,7 @@
                 <p>The book covers nutrition, exercise, mental health, preventive care, and creating sustainable healthy habits. Each chapter includes science-backed recommendations, real-life success stories, and customizable plans to fit your lifestyle.</p>
                 <p>"My Body My Story" is more than just a book—it's a roadmap to lasting wellbeing. Whether you're looking to improve your own health or better understand public health principles, this book provides the tools and knowledge you need.</p>
                 <div class="book-btn">
-                    <a href="#" class="btn">Pre-order Now</a>
+                    <a href="https://paystack.shop/pay/c5tovi3cnl" target="_blank" class="btn">Pre-order Now</a>
                     <a href="#" class="btn btn-outline">Read Sample Chapter</a>
                 </div>
             </div>
